--- a/WealthWise.UI/wwwroot/index.html
+++ b/WealthWise.UI/wwwroot/index.html
@@ -13,6 +13,9 @@
     <link href="manifest.webmanifest" rel="manifest" />
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
     <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
+    <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <link href="~/css/app.css" rel="stylesheet" />
+
 </head>
 
 <body>
